[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zkits"
version = "0.1.0"
description = "A foundational Python toolkit with reusable libraries and command-line utilities."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "zkit maintainers" }
]
keywords = ["toolkit", "cli", "utilities"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "diskcache>=5.6",
]

[project.scripts]
zkit = "zkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
